--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/php:5.5
+      - image: circleci/php:5.6-cli
     steps:
       - run:
           command: |
