--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
     docker:
       - image: circleci/php:5.6-cli
     steps:
+      - run: composer install
       - run:
           command: |
             mkdir -p ~/phpunit
