--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
     docker:
       - image: circleci/php:5.6-cli
     steps:
+      - checkout
       - run: echo $(ls)
       - run: composer install
       - run:
